--- a/talks.html
+++ b/talks.html
@@ -49,9 +49,9 @@
        <ul>
            <li> 17th April: <b>TBC</b> <br>
                Pure Mathematics Colloquium, University of St Andrews [<a href="https://www.yoavlen.com/colloquium">webpage</a>] </li>
-           <li> 26th February: <b>Bases and Saxl graphs for permutation groups</b> <br>
+           <li> 26th February: <b>Permutation groups, symmetry breaking and probability</b> <br>
                Great Bay University, Dongguan, China</li>
-           <li> 25th February: <b>Bases and Saxl graphs for permutation groups</b> <br>
+           <li> 25th February: <b>Permutation groups, symmetry breaking and probability</b> <br>
                Guangxi University, Nanning, China</li>
            <li> 12th January: <b>Regular subgroups of primitive groups</b> [<a href="../talks/Kunming_251112.pdf">slides</a>] <br>
                Groups, Graphs and Combinatorics, Kunming</li>
