--- a/research.html
+++ b/research.html
@@ -130,7 +130,7 @@
 
             <li> <i>Bases for permutation groups and related problems</i> <br>
             Supervisor: <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a><br>
-            PhD thesis, UoB, submitted (2024), 234 pp.
+            PhD thesis, UoB (2025)
           </li>
         </ol>
   </p>
