--- a/talks.html
+++ b/talks.html
@@ -49,7 +49,7 @@
        <ul>
            <li> 17th April: <b>TBC</b> <br>
                Pure Mathematics Colloquium, University of St Andrews [<a href="https://www.yoavlen.com/colloquium">webpage</a>] </li>
-           <li> 20th March: <b>Transitive subgroups of primitive groups</b> <br>
+           <li> 20th March: <b>Transitive subgroups of primitive groups</b> [<a href="../talks/Oberwolfach_250320.pdf">slides</a>] <br>
                Finite Groups, Fusion Systems and Applications, Mathematical Research Institute Oberwolfach, Germany</li>
            <li> 26th February: <b>Permutation groups, symmetry breaking and probability</b> <br>
                Great Bay University, Dongguan, China</li>
