--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>About</h2>
 
         <p>
-            Currently, I am an <a href="https://www.lms.ac.uk/grants/lms-early-career-fellowships">LMS Early Career Research Fellow</a> hosted by <a href="https://en.wikipedia.org/wiki/Colva_Roney-Dougal">Professor Colva Roney-Dougal</a> at the <a href="https://www.st-andrews.ac.uk/">University of St Andrews</a>, with financial support from the <a href="https://www.lms.ac.uk/">London Mathematical Society</a> and the <a href="https://heilbronn.ac.uk/">Heilbronn Institute for Mathematical Research</a>.
+            Currently, I am an <a href="https://www.lms.ac.uk/grants/lms-early-career-fellowships">LMS Early Career Research Fellow</a> hosted by <a href="https://en.wikipedia.org/wiki/Colva_Roney-Dougal">Professor Colva Roney-Dougal</a> at the <a href="https://www.st-andrews.ac.uk/">University of St Andrews</a> in the UK, with financial support from the <a href="https://www.lms.ac.uk/">London Mathematical Society</a> and the <a href="https://heilbronn.ac.uk/">Heilbronn Institute for Mathematical Research</a>.
         </p>
         
         <p>
