--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </p>
 
         <p>
-      If you want to drop me an email, please use my Bristol address (shown below) for now unless you are from St Andrews.
+      If you want to drop me an email, please use my Bristol address (shown below) for now, unless you are from St Andrews.
     </p>
 
 
