--- a/talks.html
+++ b/talks.html
@@ -47,7 +47,7 @@
         <p>
         <div class="list">
        <ul>
-           <li> 17th April: <b>Permutation groups, transitive subgroups and bases</b> [<a href="https://www.yoavlen.com/colloquium/hongyi-huang">webpage</a>] <br>
+           <li> 17th April: <b>Permutation groups, transitive subgroups and bases</b> [<a href="../talks/StAndrews_250417.pdf">slides</a>] [<a href="https://www.yoavlen.com/colloquium/hongyi-huang">webpage</a>] <br>
                Pure Mathematics Colloquium, University of St Andrews</li>
            <li> 20th March: <b>Transitive subgroups of primitive groups</b> [<a href="../talks/Oberwolfach_250320.pdf">slides</a>] <br>
                Finite Groups, Fusion Systems and Applications, Mathematical Research Institute Oberwolfach, Germany</li>
