--- a/research.html
+++ b/research.html
@@ -100,7 +100,7 @@
 
             <li> <i> Fixers and derangements of finite permutation groups </i> <br>
                 joint with C.H. Li and Y.L. Xie <br>
-                33 pages, submitted <br>
+                33 pages, to appear in <b>J. Algebraic Combin.</b> <br>
                 <a href="https://arxiv.org/abs/2404.18753">arXiv: 2404.18753</a>
             </li>
 
