--- a/research.html
+++ b/research.html
@@ -100,7 +100,7 @@
 
             <li> <i> Fixers and derangements of finite permutation groups </i> <br>
                 joint with C.H. Li and Y.L. Xie <br>
-                <b>J. Algebraic Combin.</b> 61 (2025), Paper No. 57, 44 pp. <br>
+                <b>Journal of Algebraic Combinatorics</b> 61 (2025), Paper No. 57, 44 pp. <br>
                 <a href="https://arxiv.org/abs/2404.18753">arXiv:2404.18753</a> | <a href="https://doi.org/10.1007/s10801-025-01425-3">doi:10.1007/s10801-025-01425-3</a>
             </li>
 
