--- a/research.html
+++ b/research.html
@@ -101,7 +101,7 @@
             <li> <i> Fixers and derangements of finite permutation groups </i> <br>
                 joint with C.H. Li and Y.L. Xie <br>
                 <b>Journal of Algebraic Combinatorics</b> 61 (2025), Paper No. 57, 44 pp. <br>
-                <a href="https://arxiv.org/abs/2404.18753">arXiv:2404.18753</a> | <a href="https://doi.org/10.1007/s10801-025-01425-3">doi:10.1007/s10801-025-01425-3</a>
+                <a href="https://arxiv.org/abs/2404.18753">arXiv:2404.18753</a> | <a href="https://doi.org/10.1007/s10801-025-01425-3">doi:10.1007/s10801-025-01425-3</a> | <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=4925294">MR4925294</a>
             </li>
 
             <li> <i> On the generalised Saxl graphs of permutation groups </i> <br>
