--- a/research.html
+++ b/research.html
@@ -110,7 +110,7 @@
                 <a href="https://arxiv.org/abs/2410.22613">arXiv:2410.22613</a>
             </li>
 
-            <li> <i> On the intersection of Sylow subgroups in almost simple groups </i> <br>
+            <li> <i> On the intersections of Sylow subgroups in almost simple groups </i> <br>
                 joint with T.C. Burness <br>
                 26 pages, submitted <br>
                 <a href="https://arxiv.org/abs/2506.19745">arXiv:2506.19745</a>
