--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </p>
         
         <p>
-            From 2021 to 2025, I was a PhD student at the <a href="https://www.bristol.ac.uk/">University of Bristol</a> (UoB) in the UK supervised by <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a>, funded by the <a href="http://www.bristol.ac.uk/students/support/finances/scholarships/china-scholarship-council/">China Scholarship Council</a>.
+            From 2021 to 2025, I was a PhD student at the <a href="https://www.bristol.ac.uk/">University of Bristol</a> (UoB) in the UK supervised by <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a> and funded by the <a href="http://www.bristol.ac.uk/students/support/finances/scholarships/china-scholarship-council/">China Scholarship Council</a>.
         </p>
         
         <p>
