--- a/research.html
+++ b/research.html
@@ -118,7 +118,8 @@
 
             <li> <i> On the intersections of nilpotent subgroups of simple groups </i> <br>
                 joint with T.C. Burness <br>
-                37 pages, submitted
+                37 pages, submitted <br>
+                <a href="https://arxiv.org/abs/2508.03479">arXiv:2508.03479</a>
             </li>
           
           
@@ -152,4 +153,5 @@
   </body>
 
 </html>
+
 
