--- a/talks.html
+++ b/talks.html
@@ -47,6 +47,10 @@
         <p>
         <div class="list">
        <ul>
+           <li> 25th Sept: <b>Intersections of Sylow subgroups in simple groups</b> [<a href="https://www.srmc.pku.edu.cn/rl/170024.htm">webpage</a>] <br>
+               Sino-Russian Mathematical Center, Peking University</li>
+           <li> 24th Sept: <b>Intersections of Sylow subgroups in simple groups</b>  <br>
+               Beijing Jiaotong University</li>
            <li> 17th April: <b>Permutation groups, transitive subgroups and bases</b> [<a href="../talks/StAndrews_250417.pdf">slides</a>] [<a href="https://www.yoavlen.com/colloquium/hongyi-huang">webpage</a>] <br>
                Pure Mathematics Colloquium, University of St Andrews</li>
            <li> 20th March: <b>Transitive subgroups of primitive groups</b> [<a href="../talks/Oberwolfach_250320.pdf">slides</a>] <br>
@@ -254,3 +258,4 @@
   </body>
 
 </html>
+
