--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>About</h2>
 
         <p>
-            Currently, I am a Research Fellow at the <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology</a> (SUSTech) in China.
+            Currently, I am a Senior Research Scholar at the <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology</a> (SUSTech) in China.
         </p>
 
         <p>
@@ -82,4 +82,5 @@
 
 
 </html>
+
 
