--- a/talks.html
+++ b/talks.html
@@ -47,6 +47,8 @@
         <p>
         <div class="list">
        <ul>
+           <li> 18th October: <b>Intersections of Sylow subgroups in simple groups</b><br>
+               Finite groups and their representations, Xiamen University, China</li>
            <li> 25th September: <b>Intersections of Sylow subgroups in simple groups</b> [<a href="https://www.srmc.pku.edu.cn/rl/170024.htm">webpage</a>] <br>
                Sino-Russian Mathematical Center, Peking University</li>
            <li> 24th September: <b>Intersections of Sylow subgroups in simple groups</b>  <br>
@@ -258,5 +260,6 @@
   </body>
 
 </html>
+
 
 
