--- a/talks.html
+++ b/talks.html
@@ -47,6 +47,8 @@
         <p>
         <div class="list">
        <ul>
+           <li> 24th October: <b>Intersections of Sylow subgroups in simple groups</b><br>
+               Central China Normal University</li>
            <li> 18th October: <b>Intersections of Sylow subgroups in simple groups</b><br>
                Finite Groups and their Representations, Xiamen University, China</li>
            <li> 25th September: <b>Intersections of Sylow subgroups in simple groups</b> [<a href="https://www.srmc.pku.edu.cn/rl/170024.htm">webpage</a>] <br>
@@ -260,6 +262,7 @@
   </body>
 
 </html>
+
 
 
 
