--- a/talks.html
+++ b/talks.html
@@ -47,8 +47,10 @@
         <p>
         <div class="list">
        <ul>
+           <li> 25th October: <b>Transitive subgroups of primitive groups</b><br>
+               China Three Gorge University, Yichang, China</li>
            <li> 24th October: <b>Intersections of Sylow subgroups in simple groups</b><br>
-               Central China Normal University</li>
+               Central China Normal University, Wuhan, China</li>
            <li> 18th October: <b>Intersections of Sylow subgroups in simple groups</b><br>
                Finite Groups and their Representations, Xiamen University, China</li>
            <li> 25th September: <b>Intersections of Sylow subgroups in simple groups</b> [<a href="https://www.srmc.pku.edu.cn/rl/170024.htm">webpage</a>] <br>
@@ -262,6 +264,7 @@
   </body>
 
 </html>
+
 
 
 
