--- a/talks.html
+++ b/talks.html
@@ -48,7 +48,7 @@
         <div class="list">
        <ul>
            <li> 25th October: <b>Transitive subgroups of primitive groups</b><br>
-               China Three Gorge University, Yichang, China</li>
+               Groups and Combinatorics, China Three Gorge University, Yichang, China</li>
            <li> 24th October: <b>Intersections of Sylow subgroups in simple groups</b><br>
                Central China Normal University, Wuhan, China</li>
            <li> 18th October: <b>Intersections of Sylow subgroups in simple groups</b><br>
@@ -264,6 +264,7 @@
   </body>
 
 </html>
+
 
 
 
