--- a/research.html
+++ b/research.html
@@ -104,16 +104,16 @@
                 <a href="https://arxiv.org/abs/2404.18753">arXiv:2404.18753</a> | <a href="https://doi.org/10.1007/s10801-025-01425-3">doi:10.1007/s10801-025-01425-3</a> | <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=4925294">MR4925294</a>
             </li>
 
+            <li> <i> On the intersections of Sylow subgroups in almost simple groups </i> <br>
+                joint with T.C. Burness <br>
+                <b>Journal of Algebra</b>, to appear <br>
+                <a href="https://arxiv.org/abs/2506.19745">arXiv:2506.19745</a>
+            </li>
+
             <li> <i> On the generalised Saxl graphs of permutation groups </i> <br>
                 joint with S.D. Freedman, M. Lee and K. Rekvényi <br>
                 35 pages, submitted <br>
                 <a href="https://arxiv.org/abs/2410.22613">arXiv:2410.22613</a>
-            </li>
-
-            <li> <i> On the intersections of Sylow subgroups in almost simple groups </i> <br>
-                joint with T.C. Burness <br>
-                26 pages, submitted <br>
-                <a href="https://arxiv.org/abs/2506.19745">arXiv:2506.19745</a>
             </li>
 
             <li> <i> On the intersections of nilpotent subgroups of simple groups </i> <br>
@@ -153,5 +153,6 @@
   </body>
 
 </html>
+
 
 
