--- a/meetings.html
+++ b/meetings.html
@@ -93,6 +93,8 @@
         <p>
             <div class="list">
         <ul>
+            <li> 7th -- 9th November: <b>Conference on Algebraic Graph Theory and Combinatorics</b> <br>
+            SUSTech, Shenzhen, China </li>
             <li> 25th October: <b>Groups and Combinatorics</b> <br>
             China Three Gorge University, Yichang, China </li>
             <li> 17th -- 19th October: <b>Finite Groups and their Representations</b> <br>
@@ -222,6 +224,7 @@
   </body>
 
 </html>
+
 
 
 
