--- a/research.html
+++ b/research.html
@@ -106,8 +106,8 @@
 
             <li> <i> On the intersections of Sylow subgroups in almost simple groups </i> <br>
                 joint with T.C. Burness <br>
-                <b>Journal of Algebra</b>, to appear <br>
-                <a href="https://arxiv.org/abs/2506.19745">arXiv:2506.19745</a>
+                <b>Journal of Algebra</b> 690 (2026), 596-631. <br>
+                <a href="https://arxiv.org/abs/2506.19745">arXiv:2506.19745</a> | <a href="https://doi.org/10.1016/j.jalgebra.2025.11.003">doi:10.1016/j.jalgebra.2025.11.003</a>
             </li>
 
             <li> <i> On the generalised Saxl graphs of permutation groups </i> <br>
@@ -153,6 +153,7 @@
   </body>
 
 </html>
+
 
 
 
