--- a/talks.html
+++ b/talks.html
@@ -47,6 +47,8 @@
         <p>
         <div class="list">
        <ul>
+           <li> 23rd December: <b>Intersections of Sylow subgroups in simple groups</b><br>
+               Yunnan University of Finance and Economics, Kunming, China</li>
            <li> 25th October: <b>Transitive subgroups of primitive groups</b><br>
                Groups and Combinatorics, China Three Gorge University, Yichang, China</li>
            <li> 24th October: <b>Intersections of Sylow subgroups in simple groups</b><br>
@@ -264,6 +266,7 @@
   </body>
 
 </html>
+
 
 
 
