--- a/research.html
+++ b/research.html
@@ -112,7 +112,7 @@
 
             <li> <i> On the generalised Saxl graphs of permutation groups </i> <br>
                 joint with S.D. Freedman, M. Lee and K. Rekvényi <br>
-                35 pages, submitted <br>
+                <b>Algebraic Combinatorics</b>, to appear <br>
                 <a href="https://arxiv.org/abs/2410.22613">arXiv:2410.22613</a>
             </li>
 
@@ -153,6 +153,7 @@
   </body>
 
 </html>
+
 
 
 
