--- a/talks.html
+++ b/talks.html
@@ -43,6 +43,16 @@
       <p> Please note that most of the slides or notes only appear for a calendar year, and don't hesitate to be in touch if you want to see some disappeared ones. </p>
         
 
+        <h4> 2026 </h4>
+        <p>
+        <div class="list">
+       <ul>
+           <li> 5th February: <b>Groups, permutations and bases</b> <br>
+               University of St Andrews</li>
+       </ul>
+      </div>
+      </p>
+        
         <h4> 2025 </h4>
         <p>
         <div class="list">
@@ -55,19 +65,27 @@
                Central China Normal University, Wuhan, China</li>
            <li> 18th October: <b>Intersections of Sylow subgroups in simple groups</b><br>
                Finite Groups and their Representations, Xiamen University, China</li>
-           <li> 25th September: <b>Intersections of Sylow subgroups in simple groups</b> [<a href="https://www.srmc.pku.edu.cn/rl/170024.htm">webpage</a>] <br>
+           <li> 25th September: <b>Intersections of Sylow subgroups in simple groups</b> 
+               <!-- [<a href="https://www.srmc.pku.edu.cn/rl/170024.htm">webpage</a>]  -->
+               <br>
                Sino-Russian Mathematical Center, Peking University</li>
            <li> 24th September: <b>Intersections of Sylow subgroups in simple groups</b>  <br>
                Beijing Jiaotong University</li>
-           <li> 17th April: <b>Permutation groups, transitive subgroups and bases</b> [<a href="../talks/StAndrews_250417.pdf">slides</a>] [<a href="https://www.yoavlen.com/colloquium/hongyi-huang">webpage</a>] <br>
+           <li> 17th April: <b>Permutation groups, transitive subgroups and bases</b>
+               <!-- [<a href="../talks/StAndrews_250417.pdf">slides</a>] [<a href="https://www.yoavlen.com/colloquium/hongyi-huang">webpage</a>] -->
+               <br>
                Pure Mathematics Colloquium, University of St Andrews</li>
-           <li> 20th March: <b>Transitive subgroups of primitive groups</b> [<a href="../talks/Oberwolfach_250320.pdf">slides</a>] <br>
+           <li> 20th March: <b>Transitive subgroups of primitive groups</b>
+               <!-- [<a href="../talks/Oberwolfach_250320.pdf">slides</a>]  -->
+               <br>
                Finite Groups, Fusion Systems and Applications, Mathematical Research Institute Oberwolfach, Germany</li>
            <li> 26th February: <b>Permutation groups, symmetry breaking and probability</b> <br>
                Great Bay University, Dongguan, China</li>
            <li> 25th February: <b>Permutation groups, symmetry breaking and probability</b> <br>
                Guangxi University, Nanning, China</li>
-           <li> 12th January: <b>Regular subgroups of primitive groups</b> [<a href="../talks/Kunming_251112.pdf">slides</a>] <br>
+           <li> 12th January: <b>Regular subgroups of primitive groups</b>
+               <!-- [<a href="../talks/Kunming_251112.pdf">slides</a>] -->
+               <br>
                Groups, Graphs and Combinatorics, Kunming</li>
        </ul>
       </div>
@@ -266,6 +284,7 @@
   </body>
 
 </html>
+
 
 
 
