--- a/talks.html
+++ b/talks.html
@@ -66,13 +66,13 @@
            <li> 18th October: <b>Intersections of Sylow subgroups in simple groups</b><br>
                Finite Groups and their Representations, Xiamen University, China</li>
            <li> 25th September: <b>Intersections of Sylow subgroups in simple groups</b> 
-               <!-- [<a href="https://www.srmc.pku.edu.cn/rl/170024.htm">webpage</a>]  -->
+               [<a href="https://www.srmc.pku.edu.cn/rl/170024.htm">webpage</a>] 
                <br>
                Sino-Russian Mathematical Center, Peking University</li>
            <li> 24th September: <b>Intersections of Sylow subgroups in simple groups</b>  <br>
                Beijing Jiaotong University</li>
            <li> 17th April: <b>Permutation groups, transitive subgroups and bases</b>
-               <!-- [<a href="../talks/StAndrews_250417.pdf">slides</a>] [<a href="https://www.yoavlen.com/colloquium/hongyi-huang">webpage</a>] -->
+               [<a href="../talks/StAndrews_250417.pdf">slides</a>] [<a href="https://www.yoavlen.com/colloquium/hongyi-huang">webpage</a>]
                <br>
                Pure Mathematics Colloquium, University of St Andrews</li>
            <li> 20th March: <b>Transitive subgroups of primitive groups</b>
@@ -284,6 +284,7 @@
   </body>
 
 </html>
+
 
 
 
