--- a/talks.html
+++ b/talks.html
@@ -72,7 +72,8 @@
            <li> 24th September: <b>Intersections of Sylow subgroups in simple groups</b>  <br>
                Beijing Jiaotong University</li>
            <li> 17th April: <b>Permutation groups, transitive subgroups and bases</b>
-               [<a href="../talks/StAndrews_250417.pdf">slides</a>] [<a href="https://www.yoavlen.com/colloquium/hongyi-huang">webpage</a>]
+               <!-- [<a href="../talks/StAndrews_250417.pdf">slides</a>] -->
+               [<a href="https://www.yoavlen.com/colloquium/hongyi-huang">webpage</a>]
                <br>
                Pure Mathematics Colloquium, University of St Andrews</li>
            <li> 20th March: <b>Transitive subgroups of primitive groups</b>
@@ -284,6 +285,7 @@
   </body>
 
 </html>
+
 
 
 
