--- a/research.html
+++ b/research.html
@@ -118,7 +118,7 @@
 
             <li> <i> On the intersections of nilpotent subgroups of simple groups </i> <br>
                 joint with T.C. Burness <br>
-                37 pages, submitted <br>
+                <b>Proceedings of the London Mathematical Society</b>, to appear <br>
                 <a href="https://arxiv.org/abs/2508.03479">arXiv:2508.03479</a>
             </li>
           
@@ -153,6 +153,7 @@
   </body>
 
 </html>
+
 
 
 
